--- a/README
+++ b/README
@@ -33,11 +33,9 @@ Because of that, burner inserters only leech fuel for themselves if their burner
 - Burner inserters fuelled by leeching only, might forget to refuel themselves when they are kept busy. The cause is, that the leech logic, for performance reasons, only runs every "Maximum ticks between updates" ticks for each inserter and, to avoid visible teleporting opf items, it leeches only if its hand is empty and hovers over the pickup position.
 The work around teleports single fuel items from pickup target's burner inventories to burner inserter's burner inventory if empty and less than a set amount of joules of energy left. I consider that cheating and tweaked the default settings so that it is triggered as rarely, as possible while not hurting performance too much. The cheat can be disabled via unticking "Use self-refuelling cheat". It can be tuned by setting "Self-refuelling cheat fuel".
 
-- Inserters don't leech from locomotives for unknown reasons.
-
-- Inserters don't leech from burner inserters for unknown reasons.
-
 
 History:
 
 - Version 0.2.0 is the first version of the fork and compatible to Factorio 0.16
+
+- Version 0.2.1 makes inserters leeching fuel from all entities containing a burner (including locomotives and burner inserters) and is compatible to Factorio 0.16
