--- a/README
+++ b/README
@@ -27,15 +27,11 @@ Deviations from BurnerLeech:
 
 Known issues:
 
-- Inserters don't leech for themselves if their fuel inventory is not empty. Tried making them grabbing more fuel, but they refused to keep it for themselves.
-Because of that, burner inserters only leech fuel for themselves if their burner inventory is empty (but they do grab a stack as big as possible, so capacity upgrades still have an effect on the refuelling frequency).
+Inserters don't leech for themselves if their fuel inventory is not empty. Tried making them grabbing more fuel, but they refused to keep it for themselves. Because of that, burner inserters only leech fuel for themselves if their burner inventory is empty (but they do grab a stack as big as possible, so capacity upgrades still have an effect on the refuelling frequency).
+Hard to fix without eating performance without proper API support (something like teleporting held fuel into own fuel inventory when hand is hovering over the inserter).
+Won't fix for now.
 
-- Burner inserters fuelled by leeching only, might forget to refuel themselves when they are kept busy. The cause is, that the leech logic, for performance reasons, only runs every "Maximum ticks between updates" ticks for each inserter and, to avoid visible teleporting opf items, it leeches only if its hand is empty and hovers over the pickup position.
-The work around teleports single fuel items from pickup target's burner inventories to burner inserter's burner inventory if empty and less than a set amount of joules of energy left. I consider that cheating and tweaked the default settings so that it is triggered as rarely, as possible while not hurting performance too much. The cheat can be disabled via unticking "Use self-refuelling cheat". It can be tuned by setting "Self-refuelling cheat fuel".
-
-
-History:
-
-- Version 0.2.0 is the first version of the fork and compatible to Factorio 0.16
-
-- Version 0.2.1 makes inserters leeching fuel from all entities containing a burner (including locomotives and burner inserters) and is compatible to Factorio 0.16
+Burner inserters, fuelled by leeching only, might forget to refuel themselves when they are kept busy. The cause is, that the leech logic, for performance reasons, only runs every "Maximum ticks between updates" ticks for each inserter while it leeches only if its hand is empty and hovers over the pickup position (to avoid visibly teleporting items).
+The current work around teleports single fuel items from the pickup target's fuel inventory to the burner inserter's fuel inventory if the latter is empty and the inserter's burner has less than a set amount of joules of energy left. That obviously is cheating. So the default settings are tweaked to be a compromise between triggering this behaviour as rarely as possible while not eating too much performance because of checking too much inserters per tick. The cheat can be disabled via unticking "Use self-refuelling cheat". It can be tuned by setting "Self-refuelling cheat fuel". You might experience burner inserters running dry if changing that settings.
+Might be fixable in a performance-friendly way by decreasing the time between checks after implementing seperate lists for inserters that need to be checked (need fuel or have a drop target that needs fuel) and inserters that do not, but might get a drop target needing refuelling in the future. The latter ones need not be checked at all until something is built or parked at their drop position.
+Might get fixed in next version.
